--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
-*.csv filter=lfs diff=lfs merge=lfs -text
+Dependency\ File\ Search/osf_dependency_results.csv filter=lfs diff=lfs merge=lfs -text
+
