--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,1 @@
-Dependency\ File\ Search/osf_dependency_results.csv filter=lfs diff=lfs merge=lfs -text
-
+*.csv filter=lfs diff=lfs merge=lfs -text
