--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "gitpython>=3.1.44",
+    "ipykernel>=6.29.5",
+    "ipywidgets>=8.1.5",
     "jupyter-repo2docker>=2024.7.0",
     "osfclient>=0.0.5",
+    "pandas>=2.2.3",
 ]
